--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Content/Site.css
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Content/Site.css
@@ -33,5 +33,7 @@ textarea {
     background-color: #ffffff;
     border: 1px solid #dddddd;
 }
-
+.widthInherit.btn-group.bootstrap-select.form-control{
+    width:inherit
+}
 
