--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -5,8 +5,6 @@
     if (Model != null)
     {
         dt = (System.DateTime)Model;
-
     }
-    @Html.TextBox("", String.Format("{0:d}", dt.ToShortDateString()),
-     new { @class = "datefield", type = "string" })
+    @Html.TextBox("", String.Format("{0:d}", dt.ToShortDateString()), new { @class = "datefield", type = "string" })
 } 
