--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
                                 </div>
 
                                 <div class="from">
-                                    <div class="input-group">
+                                    <div class="form-group">
                                         <select name="IdEmpresa" id="empresas" class="form-control selectpicker" data-live-search="true">
                                             @foreach (var lst in Model.Empresas)
                                             {
