--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/EntradaMercancia.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/EntradaMercancia.cshtml
@@ -77,14 +77,14 @@
                                     <div class="col-lg-3 col-md-12 form-float">
                                         <div class="form-group">
                                             <b>Motivo de compra:</b>
-                                            @Html.TextAreaFor(m => m.MotivoRequisicion, new { @class = "form-control  no-resize", @placeholder = "Error de carga", @rows = "4", @disabled = "disabled" })
+                                            @Html.TextAreaFor(m => m.MotivoRequisicion, new { @class = "form-control  no-resize  btn-round", @placeholder = "Error de carga", @rows = "4", @disabled = "disabled" })
 
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-md-12">
                                         <div class="form-group form-float">
                                             <b>Se requiere en:</b>
-                                            @Html.TextAreaFor(m => m.RequeridoEn, new { @class = "form-control  no-resize", @placeholder = "Error de carga", @rows = "4", @disabled = "disabled" })
+                                            @Html.TextAreaFor(m => m.RequeridoEn, new { @class = "form-control  no-resize  btn-round", @placeholder = "Error de carga", @rows = "4", @disabled = "disabled" })
                                         </div>
                                     </div>
                                 </div>
@@ -110,7 +110,7 @@
                                 {
                                     <div class="row clearfix">
                                         <div id="divMensajeError" class="container">
-                                            <div class="alert alert-danger">
+                                            <div class="alert alert-danger btn-round">
                                                 <div class="alert-icon">
                                                     <i class="zmdi zmdi-block"></i>
                                                 </div>
