--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionAutorizacion.cshtml
@@ -32,11 +32,11 @@
                 <div class="block-header">
                     <div class="row clearfix">
                         <div class="col-lg-5 col-md-5 col-sm-12">
-                            <h2>Compras</h2>
+                            <h2>Requisición</h2>
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item active">
-                                    <label id="lblRuta">Requisición / Nueva </label>
+                                    <label id="lblRuta">Requisición / Autorización </label>
                                 </li>
                             </ul>
                         </div>
@@ -53,7 +53,7 @@
                                                 <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" disabled data-live-search="true">
                                                     @foreach (var lst in ViewBag.Empresas)
                                                     {
-                                                    <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                                     }
                                                 </select>
                                             </div>
@@ -77,33 +77,37 @@
                                             <select id="ddlSoliciante" name="IdUsuarioSolicitante" class="form-control show-tick" disabled data-live-search="true">
                                                 @foreach (var lst in ViewBag.Usuarios)
                                                 {
-                                                <option value="@lst.IdUsuario">@lst.Nombre @lst.Apellido1</option>
+                                                    <option value="@lst.IdUsuario">@lst.Nombre @lst.Apellido1</option>
                                                 }
                                             </select>
                                         </div>
                                         <div class="col-lg-3">
-                                            <b>Motivo de compra:</b>
-                                            <textarea name="MotivoRequisicion" class="form-control  no-resize" disabled placeholder="Motivo de la compra..." rows="4">@Model.MotivoRequisicion</textarea>
-                                        </div>
+                                            <div class="form-group form-float">
+                                                <b>Motivo de compra:</b>
+                                                @Html.TextAreaFor(m => m.MotivoRequisicion, new { @class = "form-control no-resize btn-round", @disabled = "disabled", @placeholder = "Motivo de la compra...", @rows = "4" })
+                                            </div>
+                                            </div>
                                         <div class="col-lg-3">
-                                            <b>Se requiere en:</b>
-                                            <textarea name="RequeridoEn" class="form-control no-resize" disabled placeholder="Se requiere en..." rows="4">@Model.RequeridoEn</textarea>
+                                            <div class="form-group form-float">
+                                                <b>Se requiere en:</b>
+                                                @Html.TextAreaFor(m => m.RequeridoEn, new { @class = "form-control no-resize btn-round", @disabled = "disabled", @placeholder = "Motivo de la compra...", @rows = "4" })
+                                            </div>
                                         </div>
                                     </div>
                                     @if (ViewBag.MensajeError != null && !ViewBag.MensajeError.Equal(string.Empty))
                                     {
-                                    <div class="row clearfix">
-                                        <div id="divCampos" class="container">
-                                            <div class="alert alert-danger">
-                                                <div class="alert-icon">
-                                                    <i class="zmdi zmdi-block"></i>
+                                        <div class="row clearfix">
+                                            <div id="divCampos" class="container">
+                                                <div class="alert alert-danger">
+                                                    <div class="alert-icon">
+                                                        <i class="zmdi zmdi-block"></i>
+                                                    </div>
+                                                    <strong>
+                                                        <label>@ViewBag.MensajeError</label>
+                                                    </strong>
                                                 </div>
-                                                <strong>
-                                                    <label>@ViewBag.MensajeError</label>
-                                                </strong>
                                             </div>
                                         </div>
-                                    </div>
                                     }
                                     <div class="row clearfix">
                                         <div class="col-lg-12">
@@ -113,7 +117,7 @@
                                                     <div class="form-group">
                                                         <div class="form-line">
                                                             @*<textarea Rows="4" name="OpinionAlmacen" class="form-control no-resize" placeholder="Porfavor escriba su opinion">@Model.OpinionAlmacen</textarea>*@
-                                                            @Html.TextAreaFor(m => m.OpinionAlmacen, new { @class = "form-control no-resize", @Rows = 4, @disabled = true })
+                                                            @Html.TextAreaFor(m => m.OpinionAlmacen, new { @class = "form-control no-resize btn-round", @Rows = 4, @disabled = true })
                                                         </div>
                                                     </div>
                                                 </div>
@@ -122,7 +126,7 @@
                                     </div>
                                     <div class="row clearfix">
                                         <div class="table-responsive">
-                                            <table id="ListaProductos" cass="table table-hover">
+                                            <table class="table table-hover">
                                                 <thead>
                                                     <tr>
                                                         <td><b>Tipo</b></td>
