--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
@@ -12,9 +12,9 @@
                             <h2>Compras</h2>
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
-                                <li class="breadcrumb-item active">
-                                    <label>Compras / Ordern de Compra / Nueva "</label>
-                                </li>
+                                <li class="breadcrumb-item active">Compras</li>
+                                <li class="breadcrumb-item">Ordern de Compra </li>
+                                <li class="breadcrumb-item">Autorizar</li>
                             </ul>
                         </div>
                     </div>
