--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/ProductoOCDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/ProductoOCDTO.cshtml
@@ -8,6 +8,10 @@
 }
 @Html.HiddenFor(m => m.IdProducto)
 @Html.HiddenFor(m => m.IdCentroCosto)
+@Html.HiddenFor(m => m.EsGas)
+@Html.HiddenFor(m => m.EsTransporteGas)
+@Html.HiddenFor(m => m.EsActivoVenta)
+
 <tr>
     <td>@Model.TipoProducto</td>
     <td>@Model.Producto</td>
