--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
 
+
     <link rel="stylesheet" href="~/assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.min.css" />
 
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
+
+    <script src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
+
 </head>
 <body class="theme-black menu_dark">
     <div class="page-loader-wrapper">
@@ -524,10 +528,10 @@
     </aside>   
 </body>
 </html>
-<script src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>"
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 <script src="~/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="~/assets/plugins/bootstrap-select/js/bootstrap-select.min.js"></script>
+
 
 @*<script src="~/assets/bundles/libscripts.bundle.js"></script>*@
 <script src="~/assets/bundles/vendorscripts.bundle.js"></script>
