--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registro_cliente.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_registro_cliente.xml
@@ -86,6 +86,24 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/TILRegistroClienteActivityRazonSocial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/ETRegistroClienteActivityRazonSocial"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:textSize="25sp"
+                    android:inputType="text"
+                    android:visibility="gone"
+                    android:hint="@string/razon_social"
+                    android:singleLine="true"
+                    android:importantForAutofill="no" tools:targetApi="o" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:id="@+id/TILRegistroClienteActivityApellidoPaterno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
