--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -94,14 +94,14 @@
                             <div class="row clearfix">
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <label> @Model.NombreEmpresa</label>
+                                        <label> @Model.Empresa</label>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <div class="input-group">
                                             <b>Número de Requisición:</b>&nbsp;
-                                            <label> @Model.NumRequisicion</label>
+                                            <label> @Model.NumeroRequisicion</label>
                                         </div>
                                     </div>
                                 </div>
@@ -123,7 +123,7 @@
                                     <div class="form-group">
                                         <div class="form-group">
                                             <b>Motivo de compra:</b>
-                                            <textarea name="MotivoCompra" class="form-control  no-resize btn-round" disabled placeholder="Error de carga" rows="4">@Model.MotivoCompra</textarea>
+                                            <textarea name="MotivoCompra" class="form-control  no-resize btn-round" disabled placeholder="Error de carga" rows="4">@Model.MotivoRequisicion</textarea>
                                         </div>
                                     </div>
                                 </div>
