JOTM-02/10/2018 Cambios de punto de venta
* Ventana de búsqueda cliente
* Ventana de listado de existencia

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_solicitar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_solicitar.xml
@@ -98,7 +98,7 @@
                 android:inputType="textPersonName"
                 android:textSize="24sp"
                 android:autofillHints="@string/Buscar"
-                tools:ignore="UnusedAttribute" />
+                tools:ignore="LabelFor,UnusedAttribute" />
 
             <Button
                 android:id="@+id/BtnPuntoVentaSolicitarActivityBuscarCliente"
