--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/cliente_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/cliente_item.xml
@@ -1,81 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content">
-
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/CVEstacionesCarburacionItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="1dp"
+        app:cardElevation="2dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        app:cardUseCompatPadding="true"
+        android:focusable="true">
 
-        <TextView
-            android:id="@+id/textView37"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="15dp"
-            android:paddingEnd="22dp"
-            android:text="@string/cel"
-            android:textAlignment="center" />
-
-        <TextView
-            android:id="@+id/TVBuscarClienteActivityTelefono"
+        <android.support.v7.widget.GridLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textView37"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="15dp"
+                android:paddingEnd="22dp"
+                android:text="@string/cel"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                app:layout_column="0"
+                app:layout_gravity="fill"
+                app:layout_row="0" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/TVBuscarClienteActivityTelefono"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                app:layout_column="1"
+                app:layout_columnSpan="3"
+                app:layout_gravity="fill"
+                app:layout_row="0"
+                app:layout_rowSpan="1" />
 
-        <TextView
-            android:id="@+id/textView42"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="@string/nom"
-            android:textAlignment="center" />
+            <TextView
+                android:id="@+id/textView42"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:text="@string/nom"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                app:layout_column="0"
+                app:layout_gravity="fill"
+                app:layout_row="1" />
 
-        <TextView
-            android:id="@+id/TVBuscarClienteActivityNombre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/TVBuscarClienteActivityNombre"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                app:layout_column="1"
+                app:layout_columnSpan="3"
+                app:layout_gravity="fill"
+                app:layout_row="1" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textView38"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="15dp"
+                android:paddingEnd="23dp"
+                android:text="@string/rfc"
+                android:textSize="18sp"
+                app:layout_column="0"
+                app:layout_gravity="fill"
+                app:layout_row="2" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+            <TextView
+                android:id="@+id/TVBuscarClienteaCTIVITYrFC"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="18sp"
+                app:layout_column="1"
+                app:layout_gravity="fill"
+                app:layout_row="2" />
 
-        <TextView
-            android:id="@+id/textView38"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="15dp"
-            android:paddingEnd="23dp"
-            android:text="@string/rfc" />
+            <TextView
+                android:id="@+id/textView40"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/factura"
+                android:textSize="18sp"
+                app:layout_column="2"
+                app:layout_gravity="fill"
+                app:layout_row="2" />
 
-        <TextView
-            android:id="@+id/TVBuscarClienteaCTIVITYrFC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/textView40"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="95dp"
-            android:text="@string/factura" />
-
-        <TextView
-            android:id="@+id/TvBuscarClienteActivityFactura"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/TvBuscarClienteActivityFactura"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                app:layout_column="3"
+                app:layout_gravity="fill"
+                app:layout_row="2" />
+        </android.support.v7.widget.GridLayout>
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
