--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -539,4 +539,4 @@
 @*@Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/moment")
 @Scripts.Render("~/bundles/bootstrap")*@
-
+@*@RenderSection("scripts", required:false)*@
